<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云订货</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">正在获取数据......</string>
    <string name="edit_hint">请选择（必选）</string>
    <string name="edit_not_hint">请选择（非必选）</string>

    <!-- 登录 -->
    <string name="login_account">登录名</string>
    <string name="login_account_hint">请输入登录名</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remenber_password">记住密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_go_regit">还没有账号？注册。</string>
    <string name="login_button">登录</string>
    <string name="login_apply_init">申请加入</string>
    <string name="login_apply_try">我要体验</string>
    <!-- 我的供应商 -->
    <string name="add_my_supplier">添加供应商</string>
    <string name="add_my_supplier_name">供应商</string>
    <string name="add_my_supplier_hint">请输入供应商名称</string>
    <string name="add_my_supplier_suer">确定</string>

</resources>