<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include layout="@layout/it_top" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/default_shape_line_color" />

    <com.smart.library.view.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <com.cloud.order.view.RollHeaderView
                android:id="@+id/roll_login_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >
            </com.cloud.order.view.RollHeaderView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_white_line_bg"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/login_account"
                    android:textColor="@color/defalute_text_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/defalute_text_color_hint" />

                <EditText
                    android:id="@+id/edit_login_account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="3.5"
                    android:background="@null"
                    android:hint="@string/login_account_hint"
                    android:textColor="@color/defalute_text_color_hint"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_login_clear_account"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/iv_login_delete" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_white_line_bg" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/login_password"
                    android:textColor="@color/defalute_text_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/defalute_text_color_hint" />

                <EditText
                    android:id="@+id/edit_login_pass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="3.5"
                    android:background="@null"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/defalute_text_color_hint"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_login_clear_pass"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/iv_login_delete" />

                <ImageView
                    android:id="@+id/iv_login_see_pass"
                    android:layout_width="22dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/iv_login_no_see_password" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_login_rember_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/iv_login_rember_pass"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/iv_login_remenber_no_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_login_rember_pass"
                    android:gravity="center"
                    android:text="@string/login_remenber_password"
                    android:textColor="@color/defalute_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_login_forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/defalute_text_color"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_login_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/shape_line_grey_bg"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_login_apply_init"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/login_apply_init"
                    android:textColor="@color/blue_text_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/blue_text_color" />

                <TextView
                    android:id="@+id/tv_login_apply_try"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/login_apply_try"
                    android:textColor="@color/blue_text_color"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </com.smart.library.view.MyScrollView>

</LinearLayout>